Don't compile Adverse Events analyzer app to custom element anymore
Doing so requires compiling _all_ components as custom elements, which
for some reason makes child components quite slow in some naive testing.

Would like to revisit if https://github.com/sveltejs/svelte/issues/5869
is resolved.

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -12,6 +12,9 @@
 	</head>
 
 	<body>
-		<mcw-anesth-adverse-events-analyzer></mcw-anesth-adverse-events-analyzer>
 	</body>
+
+	<script>
+		MCWAnesthAdverseEvents.createApp(document.body);
+	</script>
 </html>
