Make into adverse-events into PWA

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -6,11 +6,46 @@
 
 		<title>MCW Anesthesiology Adverse Events Analyzer</title>
 
+		<meta
+			name="description"
+			content="An analysis tool for investigating adverse anesthesia events over a long period"
+		/>
+		<link rel="icon" href="/icon.svg" type="image/svg+xml" />
+		<link
+			rel="alternate icon"
+			href="/favicon.ico"
+			type="image/png"
+			sizes="16x16"
+		/>
+		<link
+			rel="apple-touch-icon"
+			href="/apple-touch-icon.png"
+			sizes="180x180"
+		/>
+		<link rel="mask-icon" href="/icon.svg" color="#FFFFFF" />
+		<meta name="theme-color" content="#006f66" />
+
 		<link rel="stylesheet" href="/anet.css" />
 		<link rel="stylesheet" href="/global.css" />
 
 		<script type="module" src="/main.js"></script>
 	</head>
 
-	<body></body>
+	<body>
+		<article id="app" role="application"></article>
+
+		<footer>
+			<p>
+				This site requires modern browser features. Please use an
+				updated version of Firefox, Chrome, Edge, or Safari.
+			</p>
+
+			<aside>
+				<a href="https://thenounproject.com/term/time-series/2046072/">
+					Time series icon by Christina Barysheva from the Noun
+					Project.
+				</a>
+			</aside>
+		</footer>
+	</body>
 </html>
